Fix invisible text in `form select option`

--- a/assets/install.css
+++ b/assets/install.css
@@ -53,20 +53,23 @@ The content `<div>` is where all your content goes.
 }
 
 .pure-form input, .pure-form select {
-	color: #eee;
-	border: 1px solid #fff !important;
 	border-radius: 0 !important;
 	box-shadow: none !important;
 	background-color: rgb(255, 255, 255);
 	background-color: rgba(255, 255, 255, 0.1);
 }
 
-.pure-form input:invalid, .pure-form select:invalid {
+.pure-form input, .pure-form select,
+.pure-form input:invalid, .pure-form select:invalid,
+.pure-form input:focus:invalid, .pure-form select:focus:invalid {
 	color: #eee;
 	border: 1px solid #fff !important;
 }
 
 .pure-form input:focus:invalid, .pure-form select:focus:invalid {
-	color: #eee;
 	border: 1px solid #f00 !important;
+}
+
+.pure-form select option {
+	color: #333;
 }
